tests/NormalTests/paczka1/fuzzy1/68334826.err
Error in line 4: RUVOZp S115 94,8
Error in line 6: Ft4H A65 47,5
Error in line 3: KIXezAApDkX S115 37,3
Error in line 8: RUVOZp A545 96,9
Error in line 19: S115 A545 31,7
Error in line 11: KIXezAApDkX A65 41,8
Error in line 26: S115 A65 44,9
